# exam2

./: README.md  lupin2.webm
install/: local_setup.sh  setup.sh
install/coordinate_transformer/lib/coordinate_transformer/: coordinate_transformer
install/coordinate_transformer/share/coordinate_transformer/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/coordinate_transformer/share/coordinate_transformer/cmake/: coordinate_transformerConfig.cmake
install/image_sub_pub/share/image_sub_pub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/image_sub_pub/share/image_sub_pub/cmake/: image_sub_pubConfig.cmake
install/sentry_description/share/sentry_description/: package.sh
log/: latest_build
src/: 2025╚ⁿ╝╛╦─┤¿┤≤╤º╗≡╣°╒╜╢╙╩╙╛⌡╡╝║╜╫Θ╡┌╢■┬╓┐╝║╦.md  exam2.md
src/RMSimulator/RMSimulator_Data/: ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  level1  level1.resS  level2  level2.resS  resources.assets  sharedassets0.assets.resS  sharedassets1.assets.resS
src/RMSimulator/RMSimulator_Data/Resources/: unity_builtin_extra
src/coordinate_transformer/: CMakeLists.txt
src/coordinate_transformer/src/: coordinate_transformer.cpp
src/image_sub_pub/: CMakeLists.txt
src/image_sub_pub/src/: image_sub_pub.cpp
